# collabofund-api

./: .env  .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: collabo.rs  mod.rs  user.rs
src/clients/: mod.rs  pooler_api_client.rs
src/lib/: auth.rs
src/models/: collabo.rs  user.rs
src/providers/: mod.rs  pooler_api.rs
src/repository/: collabo.rs  collabo_account.rs  mod.rs  mongodb_repo.rs  user.rs
src/service/: collabo.rs  mod.rs
src/utils/: auth.rs  mod.rs
