[package]
name = "collabofund-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
shuttle-actix-web = "0.34.1"
shuttle-runtime = "0.34.1"
tokio = "1.34.0"
config = "0.13.4"
shuttle-shared-db = { version = "0.34.0", features = ["mongodb"]}
dotenv = "0.15.0"
mongodb = "2.7.1"
serde = "1.0.193"
serde_json = "1.0.108"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
chrono="0.4.9"
reqwest = { version = "0.11.23", features = ["json"] }
tokio-stream = "0.1.14"
